@@ -1,3 +1,7 @@
+- The low level unbuffered file/socket now has a public equivalent, which
+  is defined (along with the typedefs and flags) in <sys/clib2_io.h>. Functions
+  for tinkering with it are still to come.
+
 - The math kernel code no longer uses its own private scalbn() function.
 
 - Added a function prototype for the _exit() function. Note that _exit() is
